--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@ Room 4135, Abercrombie Building H70, <br />
 Corner Abercrombie Street and Codrington Street, <br /> 
 The University of Sydney NSW 2006  <br /> 
 <br />
-Email: <a href="mailto:chen\_l@u.nus.edu">chen_l@u.nus.edu</a>  <br /> 
-<br /> 
+Email: <a href="mailto:chen\_l@u.nus.edu">chen_l@u.nus.edu</a> / <a href="mailto:li.chen@sydney.edu.au">li.chen@sydney.edu.au</a>  <br /> </p>
+<p><br /> 
 <a href="https://www.sydney.edu.au/business/about/our-people/academic-staff/li-chen.html">[Official Website]</a> <br /> 
 <br />
 <a href="https://scholar.google.com/citations?user=kCJmdVwAAAAJ&amp;hl=en">[Google Scholar]</a>    </p>
