--- a/teaching.html
+++ b/teaching.html
@@ -21,15 +21,17 @@
 <div id="toptitle">
 <h1>Teaching</h1>
 </div>
-<h2>Undergraduate</h2>
+<h2>USYD</h2>
+<ol>
+<li><p>QBUS2310: Management Science (S2 2024)</p>
+</li>
+</ol>
+<h2>NUS</h2>
 <ol>
 <li><p>DBA3701: Introduction to Optimisation (Fall 2018, Fall 2022, TA)</p>
 </li>
 <li><p>MA3252: Linear and Network Optimization (Spring 2019, Tutor)</p>
 </li>
-</ol>
-<h2>Graduate</h2>
-<ol>
 <li><p>MA5268: Theory and Algorithm for Nonlinear Optimization (Fall 2019, TA)</p>
 </li>
 <li><p>BDC6304: Robust Modelling and Optimization (Spring 2022, TA)</p>
