--- a/research.html
+++ b/research.html
@@ -32,9 +32,9 @@ Under review <br /> </p>
 Li Chen, Mabel C. Chou, Qinghe Sun <br />
 Under major revision <br /> </p>
 <h2>Publications</h2>
-<p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3937474"><b>Robust CARA Optimization</b></a> <br />
+<p><a href="https://pubsonline.informs.org/doi/10.1287/opre.2021.0654"><b>Robust CARA Optimization</b></a> <br />
 Li Chen, Melvyn Sim <br />
-<i>Operations Research, 2023+ </i> <br /></p>
+<i>Operations Research, 2024+ </i> <br /></p>
 <p><a href="https://pubsonline.informs.org/doi/abs/10.1287/opre.2023.2460"><b>An Exponential Cone Programming Approach for Managing Electric Vehicle Charging</b></a> <br />
 Li Chen, Long He, Yangfang Helen Zhou <br />
 <i>Operations Research, 2023+ </i> <a href="https://github.com/chenli-ora/EV-OR2023">[data files]</a>  <br /></p>
