--- a/teaching.html
+++ b/teaching.html
@@ -23,7 +23,7 @@
 </div>
 <h2>USYD</h2>
 <ol>
-<li><p>QBUS2310: Management Science (S2 2024)</p>
+<li><p><a href="https://www.sydney.edu.au/units/QBUS2310">QBUS2310: Management Science</a>  (S2 2024)</p>
 </li>
 </ol>
 <h2>NUS</h2>
