--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
 <div class="menu-item"><a href="research.html">Research</a></div>
 <div class="menu-item"><a href="teaching.html">Teaching</a></div>
+<div class="menu-item"><a href="activities.html">Activities</a></div>
 <div class="menu-item"><a href="docs/CV.pdf">Resume</a></div>
 </td>
 <td id="layout-content">
@@ -35,7 +36,7 @@ Email: <a href="mailto:chen\_l@u.nus.edu">chen_l@u.nus.edu</a> / <a href="mailto
 <p><br /> 
 <a href="https://www.sydney.edu.au/business/about/our-people/academic-staff/li-chen.html">[Official Website]</a> <br /> 
 <br />
-<a href="https://scholar.google.com/citations?user=kCJmdVwAAAAJ&amp;hl=en">[Google Scholar]</a>    </p>
+<a href="https://scholar.google.com/citations?user=kCJmdVwAAAAJ&amp;hl=en">[Google Scholar]</a>    <a href="https://papers.ssrn.com/sol3/cf_dev/AbsByAuth.cfm?per_id=4032934">[SSRN]</a></p>
 </td></tr></table>
 <h2>About Me </h2>
 <p>I am a lecturer (Assistant Professor) in <a href="https://www.sydney.edu.au/business/our-research/research-areas/business-analytics.html">The Discipline of Business Analytics</a>, <a href="https://www.sydney.edu.au/business/">The University of Sydney Business School</a>. Prior to Sydney, I was a research fellow in the <a href="https://iora.nus.edu.sg/">Institute of Operations Research and Analytics (IORA)</a> at National University of Singapore (NUS), where
