--- a/teaching.html
+++ b/teaching.html
@@ -15,6 +15,7 @@
 <div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="research.html">Research</a></div>
 <div class="menu-item"><a href="teaching.html" class="current">Teaching</a></div>
+<div class="menu-item"><a href="activities.html">Activities</a></div>
 <div class="menu-item"><a href="docs/CV.pdf">Resume</a></div>
 </td>
 <td id="layout-content">
@@ -23,7 +24,7 @@
 </div>
 <h2>USYD</h2>
 <ol>
-<li><p><a href="https://www.sydney.edu.au/units/QBUS2310">QBUS2310: Management Science</a>  (S2 2024)</p>
+<li><p><a href="https://www.sydney.edu.au/units/QBUS2310">QBUS2310: Management Science</a>  (S2 2024, S1 2025)</p>
 </li>
 </ol>
 <h2>NUS</h2>
