--- a/activities.html
+++ b/activities.html
@@ -14,23 +14,56 @@
 <div class="menu-category">Li Chen</div>
 <div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="research.html">Research</a></div>
-<div class="menu-item"><a href="teaching.html" class="current">Teaching</a></div>
+<div class="menu-item"><a href="teaching.html">Teaching</a></div>
+<div class="menu-item"><a href="activities.html" class="current">Activities</a></div>
 <div class="menu-item"><a href="docs/CV.pdf">Resume</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
 <h1>Professional Activities</h1>
 </div>
-<h2>Referee</h2>
+<h2>Journal Service</h2>
 <ul>
-<li><p>Operations Research</p>
-</li>
-<li><p>Transportation Research Part B: Methodological</p>
+<li><p>Referee for <i>IISE Transactions, INFORMS Journal on Computing,  Journal of Global Optimization, Management Science, Manufacturing and Service Operations Management, Mathematical Programming Computation, Mathematics of Operations Research,  Operations Research,  Transportation Research Part B: Methodological</i></p>
 </li>
 </ul>
-<h2>Conference Services</h2>
+<h2>Conference Service</h2>
 <ul>
-<li><p>2019 MSOM International Conference, Singapore (Helper)</p>
+<li><p>Judge for POMS-HK Best Student Paper Competition 2025</p>
+</li>
+<li><p>Organization Committee for WOMBAT 2024, Analytics for X Conference 2022</p>
+</li>
+<li><p>Session Chair for INFORMS Annual Meeting 2022, 2023, Analytics for X Conference 2021, 2022</p>
+</li>
+<li><p>Student Helper for MSOM Conference 2019</p>
+</li>
+</ul>
+<h2>Conference Talks</h2>
+<ul>
+<li><p>POMS-HK International Conference 2023, 2024, 2025</p>
+</li>
+<li><p>Joint Meeting of the NZMS, AustMS and AMS 2024</p>
+</li>
+<li><p>ISMP 2024</p>
+</li>
+<li><p>WOMBAT 2023</p>
+</li>
+<li><p>INFORMS Annual Meeting 2019, 2021, 2022, 2023</p>
+</li>
+<li><p>POMS-China International Conference  2023</p>
+</li>
+<li><p>SIAM Conference on Optimization 2023</p>
+</li>
+<li><p>CSAMSE Annual Conference 2019, 2021</p>
+</li>
+<li><p>M&SOM Conference 2021</p>
+</li>
+<li><p>POMS Annual Conference 2021</p>
+</li>
+</ul>
+<h2>Invited Lectures</h2>
+<ul>
+<li><p>COPT Lecture: RSOME+COPT&#8201;&mdash;&#8201;Optimization under uncertainty using exponential cones <a href="https://coridm.d2d.ai/lecture/70">[Recording (in Chinese)]</a> <a href="./docs/talk_slides/COPT.pdf">[Slides (in English)]</a> <br /></p>
 </li>
 </ul>
 </td>
