--- a/talk_list.html
+++ b/talk_list.html
@@ -15,6 +15,7 @@
 <div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="research.html">Research</a></div>
 <div class="menu-item"><a href="teaching.html" class="current">Teaching</a></div>
+<div class="menu-item"><a href="activities.html">Activities</a></div>
 <div class="menu-item"><a href="docs/CV.pdf">Resume</a></div>
 </td>
 <td id="layout-content">
