--- a/activities.html
+++ b/activities.html
@@ -24,29 +24,31 @@
 </div>
 <h2>Journal Service</h2>
 <ul>
-<li><p>Referee for <i>IISE Transactions, INFORMS Journal on Computing,  Journal of Global Optimization, Management Science, Manufacturing and Service Operations Management, Mathematical Programming Computation, Mathematics of Operations Research,  Operations Research,  Transportation Research Part B: Methodological</i></p>
+<li><p>Referee for <i>IISE Transactions, INFORMS Journal on Computing,  Journal of Global Optimization, Management Science, Manufacturing and Service Operations Management, Mathematical Programming Computation, Mathematics of Operations Research, Omega,  Operations Research, Optimization and Engineering, Production and Operations Management, Transportation Research Part B: Methodological</i></p>
 </li>
 </ul>
 <h2>Conference Service</h2>
 <ul>
+<li><p>Session Chair for INFORMS International Meeting 2025, INFORMS Annual Meeting 2022, 2023, Analytics for X Conference 2021, 2022</p>
+</li>
 <li><p>Judge for POMS-HK Best Student Paper Competition 2025</p>
 </li>
 <li><p>Organization Committee for WOMBAT 2024, Analytics for X Conference 2022</p>
-</li>
-<li><p>Session Chair for INFORMS Annual Meeting 2022, 2023, Analytics for X Conference 2021, 2022</p>
 </li>
 <li><p>Student Helper for MSOM Conference 2019</p>
 </li>
 </ul>
 <h2>Conference Talks</h2>
 <ul>
+<li><p>International Conference on Stochastic Programming 2025</p>
+</li>
 <li><p>POMS-HK International Conference 2023, 2024, 2025</p>
 </li>
 <li><p>Joint Meeting of the NZMS, AustMS and AMS 2024</p>
 </li>
-<li><p>ISMP 2024</p>
+<li><p>International Symposium on Mathematical Programming 2024</p>
 </li>
-<li><p>WOMBAT 2023</p>
+<li><p>Workshop on Optimisation, Metric Bounds, Approximation and Transversality (WOMBAT) 2023</p>
 </li>
 <li><p>INFORMS Annual Meeting 2019, 2021, 2022, 2023</p>
 </li>
@@ -63,7 +65,7 @@
 </ul>
 <h2>Invited Lectures</h2>
 <ul>
-<li><p>COPT Lecture: RSOME+COPT&#8201;&mdash;&#8201;Optimization under uncertainty using exponential cones <a href="https://coridm.d2d.ai/lecture/70">[Recording (in Chinese)]</a> <a href="./docs/talk_slides/COPT.pdf">[Slides (in English)]</a> <br /></p>
+<li><p>COPT Lecture: RSOME + COPT: Using Exponential Cones in Robust Optimization <a href="https://coridm.d2d.ai/lecture/70">[Recording (in Chinese)]</a> <a href="./docs/talk_slides/COPT.pdf">[Slides (in English)]</a> <br /></p>
 </li>
 </ul>
 </td>
