--- a/research.html
+++ b/research.html
@@ -23,22 +23,27 @@
 <h1>Research </h1>
 </div>
 <h2>Working Papers</h2>
-<p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4106222"><b>Robust Actionable Prescriptive Analytics</b></a> <br />
-Li Chen, Melvyn Sim, Xun Zhang, Long Zhao, Minglong Zhou <br /></p>
 <p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4533519"><b>Process Flexibility: A Distribution-Free Approach to Long Chain Resilience</b></a> <br />
 Li Chen, Mabel C. Chou, Qinghe Sun <br /></p>
+<p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5130565"><b>Robust Data-Driven CARA Optimization</b></a> <br />
+Li Chen, Arjun Ramachandra, Napat Rujeerapaiboon <br /></p>
 <h2>Publications</h2>
+<p><a href="https://pubsonline.informs.org/doi/10.1287/opre.2023.0300"><b>Robust Actionable Prescriptive Analytics</b></a> <br />
+Li Chen, Melvyn Sim, Xun Zhang, Long Zhao, Minglong Zhou <br />
+<i>Operations Research, 2025+ </i> <a href="https://pubsonline.informs.org/doi/suppl/10.1287/opre.2023.0300">[code files]</a> <br /></p>
 <p><a href="https://pubsonline.informs.org/doi/10.1287/opre.2023.0579"><b>Robust Optimization with Moment-Dispersion Ambiguity</b></a> <br />
 Li Chen, Chenyi Fu, Fan Si, Melvyn Sim, Peng Xiong <br />
 <i>Operations Research, 2024+ </i> <a href="https://github.com/Chenyi-Fu/Robust-Optimization-with-Moment-Dispersion-Ambiguity">[code files]</a> <br /></p>
 <p><a href="https://pubsonline.informs.org/doi/10.1287/opre.2021.0654"><b>Robust CARA Optimization</b></a> <br />
 Li Chen, Melvyn Sim <br />
-<i>Operations Research, 2024+ </i> <br /></p>
+<i>Operations Research, 2025 </i> <br /></p>
 <p><a href="https://pubsonline.informs.org/doi/abs/10.1287/opre.2023.2460"><b>An Exponential Cone Programming Approach for Managing Electric Vehicle Charging</b></a> <br />
 Li Chen, Long He, Yangfang Helen Zhou <br />
 <i>Operations Research, 2024 </i> <a href="https://github.com/chenli-ora/EV-OR2023">[data files]</a>  <br /></p>
 <ul>
 <li><p><a href="https://connect.informs.org/computing/awards/greenberg-research-award#\_gl=1*15ukxh8*\_gcl\_au*MzM2NzQ3NTA3LjE3MDA2MzExNDI.">Runner-up in INFORMS Computing Society Harvey Greenberg Research Award 2023</a></p>
+</li>
+<li><p><a href="https://connect.informs.org/computing/ics-resources/newsletters">Research Highlight in ICS Newsletter March 2025</a></p>
 </li>
 </ul>
 <p><a href="https://onlinelibrary.wiley.com/doi/abs/10.1111/poms.13837"><b>Mitigating the Financial Risk Behind Emission Cap Compliance: A Case in Maritime Transportation</b></a> <br />
