--- a/research.html
+++ b/research.html
@@ -23,11 +23,12 @@
 <h1>Research </h1>
 </div>
 <h2>Working Papers</h2>
-<p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4533519"><b>Process Flexibility: A Distribution-Free Approach to Long Chain Resilience</b></a> <br />
-Li Chen, Mabel C. Chou, Qinghe Sun <br /></p>
 <p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5130565"><b>Robust Data-Driven CARA Optimization</b></a> <br />
 Li Chen, Arjun Ramachandra, Napat Rujeerapaiboon <br /></p>
 <h2>Publications</h2>
+<p><a href="https://pubsonline.informs.org/doi/10.1287/opre.2023.0430"><b>Process Flexibility: A Distribution-Free Approach to Long Chain Resilience</b></a> <br />
+Li Chen, Mabel C. Chou, Qinghe Sun <br />
+<i>Operations Research, 2025+ </i>  <br /></p>
 <p><a href="https://pubsonline.informs.org/doi/10.1287/opre.2023.0300"><b>Robust Actionable Prescriptive Analytics</b></a> <br />
 Li Chen, Melvyn Sim, Xun Zhang, Long Zhao, Minglong Zhou <br />
 <i>Operations Research, 2025+ </i> <a href="https://pubsonline.informs.org/doi/suppl/10.1287/opre.2023.0300">[code files]</a> <br /></p>
