--- a/teaching.html
+++ b/teaching.html
@@ -24,7 +24,7 @@
 </div>
 <h2>USYD</h2>
 <ol>
-<li><p><a href="https://www.sydney.edu.au/units/QBUS2310">QBUS2310: Management Science</a>  (S2 2024, S1 2025)</p>
+<li><p><a href="https://www.sydney.edu.au/units/QBUS2310">QBUS2310: Management Science</a>  (S2 2024, S1 2025, S2 2025)</p>
 </li>
 </ol>
 <h2>NUS</h2>
