--- a/activities.html
+++ b/activities.html
@@ -42,6 +42,8 @@
 <ul>
 <li><p>International Conference on Stochastic Programming 2025</p>
 </li>
+<li><p>Workshop on Robust Optimization Methods and Applications 2025 at CUHK-Shenzhen</p>
+</li>
 <li><p>POMS-HK International Conference 2023, 2024, 2025</p>
 </li>
 <li><p>Joint Meeting of the NZMS, AustMS and AMS 2024</p>
